// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddCollectionQueryDialogComponent > should render correctly 1`] = `
<div
  id="root0"
  ng-version="20.3.3"
>
  <app-dialog>
    <div
      class="add-to-collection-wrapper"
    >
      <div
        class="app-dialog-section"
      >
         SAVE_TO_COLLECTION_NAME_OF_QUERY 
        <input
          aria-label="SAVE_TO_COLLECTION_NAME_OF_QUERY"
          class="input ng-untouched ng-pristine ng-valid"
          data-test-id="collection-query-name"
          type="text"
        />
      </div>
      <div
        class="app-dialog-section"
      >
        <nz-form-label
          class="ant-form-item-label ant-col"
        >
          <label>
            SAVE_TO_COLLECTION_SELECT_COLLECTION
            <!--container-->
          </label>
        </nz-form-label>
        <nz-form-control
          class="ant-form-item-control ng-tns-c1604109519-0 ant-col"
        >
          <div
            class="ant-form-item-control-input ng-tns-c1604109519-0"
          >
            <div
              class="ant-form-item-control-input-content ng-tns-c1604109519-0"
            >
              <nz-select
                class="ant-select dialog-block ng-tns-c400074995-1 ng-tns-c1604109519-0 ng-star-inserted ant-select-in-form-item ant-select-show-arrow ant-select-single ng-untouched ng-pristine ng-valid"
                name="collection"
                nzplaceholder="Choose"
              >
                <nz-select-top-control
                  cdkoverlayorigin=""
                  class="ant-select-selector ng-tns-c400074995-1 nz-animate-disabled"
                >
                  <nz-select-search
                    class="ant-select-selection-search ng-star-inserted"
                  >
                    <input
                      autocomplete="off"
                      class="ant-select-selection-search-input ng-untouched ng-pristine ng-valid"
                      readonly="readonly"
                      style="opacity: 0;"
                    />
                    <!--container-->
                  </nz-select-search>
                  <!--container-->
                  <!--ng-container-->
                  <!--container-->
                  <!--container-->
                  <!--ng-container-->
                  <nz-select-placeholder
                    class="ant-select-selection-placeholder ng-star-inserted"
                  >
                     Choose 
                    <!--ng-container-->
                    <!--container-->
                  </nz-select-placeholder>
                  <!--container-->
                </nz-select-top-control>
                <nz-select-arrow
                  class="ant-select-arrow ng-tns-c400074995-1 ng-star-inserted"
                >
                  <span
                    class="anticon anticon-down ng-star-inserted"
                    nz-icon=""
                    nztype="down"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                  <!--container-->
                  <!--container-->
                  <!--ng-container-->
                  <!--container-->
                  <!--container-->
                  <!--container-->
                  <!--container-->
                  <!--container-->
                  <!--container-->
                </nz-select-arrow>
                <!--container-->
                <!--container-->
                <!--container-->
              </nz-select>
            </div>
          </div>
          <!--container-->
          <!--container-->
        </nz-form-control>
      </div>
      <!--container-->
    </div>
  </app-dialog>
</div>
`;

exports[`AddCollectionQueryDialogComponent > should render correctly with [collections] 1`] = `
<div
  id="root4"
  ng-version="20.3.3"
>
  <app-dialog>
    <div
      class="add-to-collection-wrapper"
    >
      <div
        class="app-dialog-section"
      >
         SAVE_TO_COLLECTION_NAME_OF_QUERY 
        <input
          aria-label="SAVE_TO_COLLECTION_NAME_OF_QUERY"
          class="input ng-untouched ng-pristine ng-valid"
          data-test-id="collection-query-name"
          type="text"
        />
      </div>
      <div
        class="app-dialog-section"
      >
        <nz-form-label
          class="ant-form-item-label ant-col"
        >
          <label>
            SAVE_TO_COLLECTION_SELECT_COLLECTION
            <!--container-->
          </label>
        </nz-form-label>
        <nz-form-control
          class="ant-form-item-control ng-tns-c1604109519-0 ant-col"
        >
          <div
            class="ant-form-item-control-input ng-tns-c1604109519-0"
          >
            <div
              class="ant-form-item-control-input-content ng-tns-c1604109519-0"
            >
              <nz-select
                class="ant-select dialog-block ng-tns-c400074995-1 ng-tns-c1604109519-0 ng-star-inserted ant-select-in-form-item ant-select-show-arrow ant-select-single ng-untouched ng-pristine ng-valid"
                name="collection"
                nzplaceholder="Choose"
              >
                <nz-select-top-control
                  cdkoverlayorigin=""
                  class="ant-select-selector ng-tns-c400074995-1 nz-animate-disabled"
                >
                  <nz-select-search
                    class="ant-select-selection-search ng-star-inserted"
                  >
                    <input
                      autocomplete="off"
                      class="ant-select-selection-search-input ng-untouched ng-pristine ng-valid"
                      readonly="readonly"
                      style="opacity: 0;"
                    />
                    <!--container-->
                  </nz-select-search>
                  <!--container-->
                  <!--ng-container-->
                  <!--container-->
                  <!--container-->
                  <!--ng-container-->
                  <nz-select-placeholder
                    class="ant-select-selection-placeholder ng-star-inserted"
                  >
                     Choose 
                    <!--ng-container-->
                    <!--container-->
                  </nz-select-placeholder>
                  <!--container-->
                </nz-select-top-control>
                <nz-select-arrow
                  class="ant-select-arrow ng-tns-c400074995-1 ng-star-inserted"
                >
                  <span
                    class="anticon anticon-down ng-star-inserted"
                    nz-icon=""
                    nztype="down"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                  <!--container-->
                  <!--container-->
                  <!--ng-container-->
                  <!--container-->
                  <!--container-->
                  <!--container-->
                  <!--container-->
                  <!--container-->
                  <!--container-->
                </nz-select-arrow>
                <!--container-->
                <!--container-->
                <!--container-->
              </nz-select>
            </div>
          </div>
          <!--container-->
          <!--container-->
        </nz-form-control>
      </div>
      <!--container-->
    </div>
  </app-dialog>
</div>
`;

exports[`AddCollectionQueryDialogComponent > should render correctly with [windowTitle] 1`] = `
<div
  id="root2"
  ng-version="20.3.3"
>
  <app-dialog>
    <div
      class="add-to-collection-wrapper"
    >
      <div
        class="app-dialog-section"
      >
         SAVE_TO_COLLECTION_NAME_OF_QUERY 
        <input
          aria-label="SAVE_TO_COLLECTION_NAME_OF_QUERY"
          class="input ng-untouched ng-pristine ng-valid"
          data-test-id="collection-query-name"
          type="text"
        />
      </div>
      <div
        class="app-dialog-section"
      >
        <nz-form-label
          class="ant-form-item-label ant-col"
        >
          <label>
            SAVE_TO_COLLECTION_SELECT_COLLECTION
            <!--container-->
          </label>
        </nz-form-label>
        <nz-form-control
          class="ant-form-item-control ng-tns-c1604109519-0 ant-col"
        >
          <div
            class="ant-form-item-control-input ng-tns-c1604109519-0"
          >
            <div
              class="ant-form-item-control-input-content ng-tns-c1604109519-0"
            >
              <nz-select
                class="ant-select dialog-block ng-tns-c400074995-1 ng-tns-c1604109519-0 ng-star-inserted ant-select-in-form-item ant-select-show-arrow ant-select-single ng-untouched ng-pristine ng-valid"
                name="collection"
                nzplaceholder="Choose"
              >
                <nz-select-top-control
                  cdkoverlayorigin=""
                  class="ant-select-selector ng-tns-c400074995-1 nz-animate-disabled"
                >
                  <nz-select-search
                    class="ant-select-selection-search ng-star-inserted"
                  >
                    <input
                      autocomplete="off"
                      class="ant-select-selection-search-input ng-untouched ng-pristine ng-valid"
                      readonly="readonly"
                      style="opacity: 0;"
                    />
                    <!--container-->
                  </nz-select-search>
                  <!--container-->
                  <!--ng-container-->
                  <!--container-->
                  <!--container-->
                  <!--ng-container-->
                  <nz-select-placeholder
                    class="ant-select-selection-placeholder ng-star-inserted"
                  >
                     Choose 
                    <!--ng-container-->
                    <!--container-->
                  </nz-select-placeholder>
                  <!--container-->
                </nz-select-top-control>
                <nz-select-arrow
                  class="ant-select-arrow ng-tns-c400074995-1 ng-star-inserted"
                >
                  <span
                    class="anticon anticon-down ng-star-inserted"
                    nz-icon=""
                    nztype="down"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                  <!--container-->
                  <!--container-->
                  <!--ng-container-->
                  <!--container-->
                  <!--container-->
                  <!--container-->
                  <!--container-->
                  <!--container-->
                  <!--container-->
                </nz-select-arrow>
                <!--container-->
                <!--container-->
                <!--container-->
              </nz-select>
            </div>
          </div>
          <!--container-->
          <!--container-->
        </nz-form-control>
      </div>
      <!--container-->
    </div>
  </app-dialog>
</div>
`;
